# Provenance

./: .gitattributes.example  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  DOLT_REMOTE.md  LICENSE  PROMPT.md  README.md  manifest  package-lock.json  package.json
.beads/: metadata.json  (+1 more)
crates/provenance-cli/: Cargo.toml
crates/provenance-cli/src/: cli.rs  docs.rs  gitignore.rs  handlers.rs  legacy_cleanup.rs  main.rs  output.rs  skills.rs
crates/provenance-cli/src/cli/: core.rs  graph.rs  ideation.rs  knowledge.rs  policy.rs  services.rs  shaping.rs  workspace.rs
crates/provenance-cli/src/docs/: web.rs
crates/provenance-cli/src/handlers/: boundaries.rs  check.rs  common.rs  contributions.rs  coverage.rs  dispositions.rs  docs.rs  domains.rs  edges.rs  evidence_review.rs  export.rs  gaps.rs  graph.rs  graph_reference.rs  health.rs  impact.rs  import.rs  materialize.rs  merge_jsonl.rs  mod.rs  orphans.rs  prime.rs  promotion_decisions.rs  proposals.rs  questions.rs  repo.rs  requirements.rs  resolutions.rs  rules.rs  schema.rs  service_bindings.rs  services.rs  skills.rs  sources.rs  stale.rs  swarm_backtrace.rs  synthesis_packets.rs  thread.rs  topics.rs  traceability.rs  (+2 more)
crates/provenance-cli/src/wiki/: assemble.rs  links.rs  mod.rs  model.rs  publish.rs  render.rs  routes.rs  site.rs  theme.rs
crates/provenance-cli/tests/: cli_check.rs  cli_coverage.rs  cli_docs.rs  cli_domains_services.rs  cli_edges.rs  cli_end_to_end.rs  cli_enrichment.rs  cli_evidence_review_base_override.rs  cli_evidence_review_ownership.rs  cli_graph_references.rs  cli_help.rs  cli_ideation_outputs.rs  cli_ideation_schema_versions.rs  cli_import_exact_replacement.rs  cli_import_legacy_audit.rs  cli_import_lifecycle.rs  cli_import_safety.rs  cli_import_trust.rs  cli_init.rs  cli_origin.rs  cli_reports.rs  cli_schema_validate.rs  cli_shaping.rs  cli_shaping_question_guidance.rs  cli_shaping_question_updates.rs  cli_shaping_roundtrip.rs  cli_shaping_turn_state.rs  cli_skills.rs  cli_skills_cleanup.rs  cli_source_requirement.rs  cli_stale_incremental.rs  cli_structure.rs  cli_swarm_backtrace_land.rs  cli_thread_prime.rs  cli_traceability.rs  cli_wiki.rs
crates/provenance-store/: Cargo.toml
crates/provenance-store/migrations/: 001_initial_cache.sql  002_sources_requirements_edges.sql  003_resolutions_rules.sql  004_threads_messages.sql  005_report_indexes.sql  006_ideation_outputs.sql  007_shaping_scaffolding.sql  008_resolution_source_enrichment.sql  009_domains_services.sql  010_shaping_turn_state.sql  011_commit_pin_confidence.sql  012_proposal_assertions.sql  012_proposal_lifecycle.sql  013_assertion_records.sql  013_disposition_terminology.sql
crates/provenance-store/src/: cache.rs  graph_reference.rs  jsonl.rs  layout.rs  lib.rs  merge.rs  migrations.rs  publication.rs  shards.rs  state_store.rs  transaction.rs
crates/provenance-store/tests/: domain_services.rs  graph_reference_errors.rs  scope_replacement_api.rs
(+289 files in other folders)
