[workspace]
members = [
    "crates/provenance-cli",
    "crates/provenance-core",
    "crates/provenance-scanner",
    "crates/provenance-store",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Doc-requirement lints are too noisy for an internal tool
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
axum = "0.7"
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
insta = "1.39"
jsonschema = "0.18"
pulldown-cmark = "0.10"
rustix = { version = "1.1", features = ["fs"] }
same-file = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_ignored = "0.1"
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }
toml = "0.8"
predicates = "3.1"
walkdir = "2.5"
