[package]
name = "provenance-cli"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "provenance"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
camino.workspace = true
clap.workspace = true
jsonschema.workspace = true
pulldown-cmark.workspace = true
provenance-core = { path = "../provenance-core" }
provenance-scanner = { path = "../provenance-scanner" }
provenance-store = { path = "../provenance-store" }
remove_dir_all.workspace = true
rustix.workspace = true
same-file.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
walkdir.workspace = true

[features]
default = []
scanner = []

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
jsonschema.workspace = true
tempfile.workspace = true
predicates.workspace = true
