[package]
name = "provenance-store"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
provenance-core = { path = "../provenance-core" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tempfile.workspace = true
tokio.workspace = true
