[package]
name = "provenance-store"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
fs2.workspace = true
provenance-core = { path = "../provenance-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
